Tried to fix pdf embedding and improved Research tab

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,3 +1,9 @@
 "arXiv":
   url: https://arxiv.org/list/math.AG/new
   color: "#9d0208"
+
+"MSc thesis":
+  color: "#002147"
+
+"BSc thesis":
+  color: "#9d0208"
