Changed logo, fixed errors, updated about me

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -3,7 +3,9 @@
   color: "#9d0208"
 
 "MSc thesis":
+  url: https://www.maths.ox.ac.uk/
   color: "#002147"
 
 "BSc thesis":
+  url: https://mat.usal.es/
   color: "#9d0208"
