--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,13 @@ middle_name:
 last_name: Gonzalez Hernandez
 email: alvaro.gonzalez-hernandez@warwick.ac.uk
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  PhD student in algebraic geometry and number theory at the University of Warwick
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
+  Website powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website, number-theory, mathematics # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: assets/img/Kummer Logo.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://AlvaroGohe.github.io # the base hostname & protocol for your site
 baseurl: 
