--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ footer_text: >
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website, number-theory, mathematics # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: assets/img/Kummer Logo.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: Kummer Logo.png # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://AlvaroGohe.github.io # the base hostname & protocol for your site
 baseurl: 
