Added links to paper

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -1,5 +1,5 @@
 "arXiv":
-  url: https://arxiv.org/list/math.AG/new
+  url: https://arxiv.org/a/gonzalezhernandez_a_1.html
   color: "#9d0208"
 
 "MSc thesis":
