added summer report and fix errors

--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -2,6 +2,9 @@
   url: https://arxiv.org/a/gonzalezhernandez_a_1.html
   color: "#9d0208"
 
+"Summer report":
+  color: "#8023AD"
+
 "MSc thesis":
   url: https://www.maths.ox.ac.uk/
   color: "#002147"
