--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -12,3 +12,7 @@
 "BSc thesis":
   url: https://mat.usal.es/
   color: "#9d0208"
+
+"Journal of Symbolic Computation":
+  url: https://www.sciencedirect.com/journal/journal-of-symbolic-computation
+  color: "#efbc1b"
