--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -13,6 +13,6 @@
   url: https://mat.usal.es/
   color: "#9d0208"
 
-"Journal of Symbolic Computation":
+"J. Symb. Comput.":
   url: https://www.sciencedirect.com/journal/journal-of-symbolic-computation
   color: "#efbc1b"
