--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -5,6 +5,9 @@
 "Summer report":
   color: "#8023ad"
 
+"PhD thesis":
+  color: "#8023ad"
+
 "MSc thesis":
   url: https://www.maths.ox.ac.uk/
   color: "#002147"
