--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -3,9 +3,11 @@
   color: "#9d0208"
 
 "Summer report":
+  url: https://warwick.ac.uk/fac/sci/maths/people/staff/GonzalezHernandez/
   color: "#8023ad"
 
 "PhD thesis":
+  url: https://warwick.ac.uk/fac/sci/maths/people/staff/GonzalezHernandez/
   color: "#8023ad"
 
 "MSc thesis":
